--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@ img.logo {
             
             <br>
             <hr>
-
+<h3>⚙️ Servicios</h3>
+<p>Brindamos soluciones integrales para entornos profesionales de hostelería. Si sucede tras la barra o en la cocina, podemos solucionarlo.  
+Nos especializamos en la reparación de equipos frigoríficos, lavavajillas industriales, túneles de lavado, hornos, campanas de extracción y grifería, entre otros.</p>  
+Consulta la <a href="https://www.gastrosat.com">lista completa de servicios</a>.  
+<br>  
+<hr>
             <h3>📚 Explora nuestros catálogos</h3>
             <ul style="list-style: none; padding: 0;">
 <li>📖 <a href="https://www.dropbox.com/scl/fi/7azi0aroqvb1rf58zyauz/Infrico_cat-logo_general_2025.pdf?rlkey=09l5h3hrbyzhs6wdmnbykhb4y&st=waaqud6v&raw=1" target="_blank">Ver Catálogo</a> INFRICO |
