--- a/privacidad.html
+++ b/privacidad.html
@@ -64,6 +64,7 @@ footer img:hover {
 }
 
 </style>
+    <link rel="stylesheet" href="styles.css">
 <link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
     <!-- Favicon estándar -->
 <link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
