--- a/servicios.html
+++ b/servicios.html
@@ -96,48 +96,58 @@ footer img:hover {
 
         <!-- Caja de contenido sin borde -->
         <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
-            <h2>Servicios</h2>
-            ⚙️ Servicios de Asistencia Técnica en Hostelería
-🧊 Frío Industrial
-✔ Cámaras de conservación y congelación (puertas, paneles, evaporadores, compresores)
-✔ Vitrinas refrigeradas (expositoras, murales, autoservicio)
-✔ Mesas frías y armarios refrigerados (gastronorm, pastelería, heladería)
-✔ Fabricadores de hielo (cubito, escama, nugget, hielo seco)
-✔ Enfriadores de botellas y barriles
+            <h3>⚙️ Servicios de Asistencia Técnica en Hostelería</h3>
 
-🔥 Cocción y Calor
-✔ Hornos (convectores, mixtos, brasa, pizza)
-✔ Planchas, fry-tops y parrillas
-✔ Freidoras y baños maría
-✔ Cocinas industriales y quemadores
-✔ Mantenedores de calor y lámparas infrarrojas
+<h4>🧊 Frío Industrial</h4>
+<ul>
+    <li>✔ <strong>Cámaras de conservación y congelación:</strong> puertas, paneles, evaporadores, compresores.</li>
+    <li>✔ <strong>Vitrinas refrigeradas:</strong> expositoras, murales, autoservicio.</li>
+    <li>✔ <strong>Mesas frías y armarios refrigerados:</strong> gastronorm, pastelería, heladería.</li>
+    <li>✔ <strong>Fabricadores de hielo:</strong> cubito, escama, nugget, hielo seco.</li>
+    <li>✔ <strong>Enfriadores de botellas y barriles.</strong></li>
+</ul>
 
-🚰 Lavado y Higiene
-✔ Lavavajillas industriales (cúpula, arrastre, túneles de lavado)
-✔ Lavavasos y lavaplatos
-✔ Dosificadores de detergente y abrillantador
-✔ Sistemas de filtrado y ósmosis inversa
+<h4>🔥 Cocción y Calor</h4>
+<ul>
+    <li>✔ <strong>Hornos:</strong> convectores, mixtos, brasa, pizza.</li>
+    <li>✔ <strong>Planchas, fry-tops y parrillas.</strong></li>
+    <li>✔ <strong>Freidoras y baños maría.</strong></li>
+    <li>✔ <strong>Cocinas industriales y quemadores.</strong></li>
+    <li>✔ <strong>Mantenedores de calor y lámparas infrarrojas.</strong></li>
+</ul>
 
-💨 Extracción y Ventilación
-✔ Campanas extractoras (filtrado, compensación, UV)
-✔ Motores y turbinas de extracción
-✔ Filtros de grasa y carbón activo
-✔ Sistemas de renovación de aire
+<h4>🚰 Lavado y Higiene</h4>
+<ul>
+    <li>✔ <strong>Lavavajillas industriales:</strong> cúpula, arrastre, túneles de lavado.</li>
+    <li>✔ <strong>Lavavasos y lavaplatos.</strong></li>
+    <li>✔ <strong>Dosificadores de detergente y abrillantador.</strong></li>
+    <li>✔ <strong>Sistemas de filtrado y ósmosis inversa.</strong></li>
+</ul>
 
-🍽️ Buffets y Autoservicio
-✔ Baños maría y mesas calientes
-✔ Islas de frío y self-service
-✔ Termos y dispensadores de líquidos
+<h4>💨 Extracción y Ventilación</h4>
+<ul>
+    <li>✔ <strong>Campanas extractoras:</strong> filtrado, compensación, UV.</li>
+    <li>✔ <strong>Motores y turbinas de extracción.</strong></li>
+    <li>✔ <strong>Filtros de grasa y carbón activo.</strong></li>
+    <li>✔ <strong>Sistemas de renovación de aire.</strong></li>
+</ul>
 
-🔩 Otros Equipos y Elementos
-✔ Grifería industrial y prelavado
-✔ Mesas, fregaderos y mobiliario de acero inoxidable
-✔ Máquinas de café y molinos
-✔ Trituradores y compactadores de residuos
-✔ Sistemas de iluminación y control eléctrico
-<a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
-    ← Volver al inicio
-</a>
+<h4>🍽️ Buffets y Autoservicio</h4>
+<ul>
+    <li>✔ <strong>Baños maría y mesas calientes.</strong></li>
+    <li>✔ <strong>Islas de frío y self-service.</strong></li>
+    <li>✔ <strong>Termos y dispensadores de líquidos.</strong></li>
+</ul>
+
+<h4>🔩 Otros Equipos y Elementos</h4>
+<ul>
+    <li>✔ <strong>Grifería industrial y prelavado.</strong></li>
+    <li>✔ <strong>Mesas, fregaderos y mobiliario de acero inoxidable.</strong></li>
+    <li>✔ <strong>Máquinas de café y molinos.</strong></li>
+    <li>✔ <strong>Trituradores y compactadores de residuos.</strong></li>
+    <li>✔ <strong>Sistemas de iluminación y control eléctrico.</strong></li>
+</ul>
+
         </div>
 
 <!-- Footer con imágenes de logos con opacidad reducida -->
