--- a/servicios.html
+++ b/servicios.html
@@ -147,7 +147,9 @@ footer img:hover {
     <li>✔ <strong>Trituradores y compactadores de residuos.</strong></li>
     <li>✔ <strong>Sistemas de iluminación y control eléctrico.</strong></li>
 </ul>
-
+<a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
+    ← Volver al inicio
+</a>
         </div>
 
 <!-- Footer con imágenes de logos con opacidad reducida -->
