--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ img.logo {
             <h3>⚙️ Servicios</h3>
             <p>Brindamos soluciones integrales para entornos profesionales de hostelería. Si sucede tras la barra, en la cocina, en una cámara o bajo el fregadero o pica, podemos solucionarlo.  
             Nos especializamos en la reparación de equipos frigoríficos, lavavajillas industriales, túneles de lavado, hornos, campanas de extracción, entre otros.</p>  
-            <p>En este enlace puedes consultar la <a href="https://www.gastrosat.com/sevicios.html">lista completa de servicios</a>.</p>  
+            <p>En este enlace puedes consultar la <a href="https://www.gastrosat.com/servicios.html">lista completa de servicios</a>.</p>  
             <br>  
             <hr>
             
