--- a/servicios.html
+++ b/servicios.html
@@ -96,7 +96,7 @@ footer img:hover {
 
         <!-- Caja de contenido sin borde -->
         <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
-            <h3>⚙️ Servicios de Asistencia Técnica en Hostelería</h3>
+            <h3>⚙️ Servicios de Asistencia Técnica para Hostelería</h3>
 
 <h4>🧊 Frío Industrial</h4>
 <ul>
