--- a/servicios.html
+++ b/servicios.html
@@ -100,7 +100,7 @@ footer img:hover {
 
 <h4>🧊 Frío Industrial</h4>
 <ul>
-    <li>✔ <strong>Cámaras de conservación y congelación:</strong> puertas, paneles, evaporadores, compresores.</li>
+    ✔ <li><strong>Cámaras de conservación y congelación:</strong> puertas, paneles, evaporadores, compresores.</li>
     <li>✔ <strong>Vitrinas refrigeradas:</strong> expositoras, murales, autoservicio.</li>
     <li>✔ <strong>Mesas frías y armarios refrigerados:</strong> gastronorm, pastelería, heladería.</li>
     <li>✔ <strong>Fabricadores de hielo:</strong> cubito, escama, nugget, hielo seco.</li>
