--- a/servicios.html
+++ b/servicios.html
@@ -100,11 +100,11 @@ footer img:hover {
 
 <h3>🧊 Frío Industrial</h3>
 <ul>
-    <li>✔ <strong>Cámaras de conservación y congelación:</strong> puertas, paneles, evaporadores, compresores.</li>
-    <li>✔ <strong>Vitrinas refrigeradas:</strong> expositoras, murales, autoservicio.</li>
-    <li>✔ <strong>Mesas frías y armarios refrigerados:</strong> gastronorm, pastelería, heladería.</li>
-    <li>✔ <strong>Fabricadores de hielo:</strong> cubito, escama, nugget, hielo seco.</li>
-    <li>✔ <strong>Enfriadores de botellas y barriles.</strong></li>
+    <li>✅ <strong>Cámaras de conservación y congelación:</strong> puertas, paneles, evaporadores, compresores.</li>
+    <li>✅ <strong>Vitrinas refrigeradas:</strong> expositoras, murales, autoservicio.</li>
+    <li>✅ <strong>Mesas frías y armarios refrigerados:</strong> gastronorm, pastelería, heladería.</li>
+    <li>✅ <strong>Fabricadores de hielo:</strong> cubito, escama, nugget, hielo seco.</li>
+    <li>✅ <strong>Enfriadores de botellas y barriles.</strong></li>
 </ul>
 
 <h3>🔥 Cocción y Calor</h3>
