--- a/servicios.html
+++ b/servicios.html
@@ -109,43 +109,43 @@ footer img:hover {
 
 <h3>🔥 Cocción y Calor</h3>
 <ul>
-    <li>✔ <strong>Hornos:</strong> convectores, mixtos, brasa, pizza.</li>
-    <li>✔ <strong>Planchas, fry-tops y parrillas.</strong></li>
-    <li>✔ <strong>Freidoras y baños maría.</strong></li>
-    <li>✔ <strong>Cocinas industriales y quemadores.</strong></li>
-    <li>✔ <strong>Mantenedores de calor y lámparas infrarrojas.</strong></li>
+    <li> <strong>Hornos:</strong> convectores, mixtos, brasa, pizza.</li>
+    <li> <strong>Planchas, fry-tops y parrillas.</strong></li>
+    <li> <strong>Freidoras y baños maría.</strong></li>
+    <li> <strong>Cocinas industriales y quemadores.</strong></li>
+    <li> <strong>Mantenedores de calor y lámparas infrarrojas.</strong></li>
 </ul>
 
 <h3>🚰 Lavado y Higiene</h3>
 <ul>
-    <li>✔ <strong>Lavavajillas industriales:</strong> cúpula, arrastre, túneles de lavado.</li>
-    <li>✔ <strong>Lavavasos y lavaplatos.</strong></li>
-    <li>✔ <strong>Dosificadores de detergente y abrillantador.</strong></li>
-    <li>✔ <strong>Sistemas de filtrado y ósmosis inversa.</strong></li>
+    <li> <strong>Lavavajillas industriales:</strong> cúpula, arrastre, túneles de lavado.</li>
+    <li> <strong>Lavavasos y lavaplatos.</strong></li>
+    <li> <strong>Dosificadores de detergente y abrillantador.</strong></li>
+    <li> <strong>Sistemas de filtrado y ósmosis inversa.</strong></li>
 </ul>
 
 <h3>💨 Extracción y Ventilación</h3>
 <ul>
-    <li>✔ <strong>Campanas extractoras:</strong> filtrado, compensación, UV.</li>
-    <li>✔ <strong>Motores y turbinas de extracción.</strong></li>
-    <li>✔ <strong>Filtros de grasa y carbón activo.</strong></li>
-    <li>✔ <strong>Sistemas de renovación de aire.</strong></li>
+    <li> <strong>Campanas extractoras:</strong> filtrado, compensación, UV.</li>
+    <li> <strong>Motores y turbinas de extracción.</strong></li>
+    <li> <strong>Filtros de grasa y carbón activo.</strong></li>
+    <li> <strong>Sistemas de renovación de aire.</strong></li>
 </ul>
 
 <h3>🍽️ Buffets y Autoservicio</h3>
 <ul>
-    <li>✔ <strong>Baños maría y mesas calientes.</strong></li>
-    <li>✔ <strong>Islas de frío y self-service.</strong></li>
-    <li>✔ <strong>Termos y dispensadores de líquidos.</strong></li>
+    <li> <strong>Baños maría y mesas calientes.</strong></li>
+    <li> <strong>Islas de frío y self-service.</strong></li>
+    <li> <strong>Termos y dispensadores de líquidos.</strong></li>
 </ul>
 
 <h3>🔩 Otros Equipos y Elementos</h3>
 <ul>
-    <li>✔ <strong>Grifería industrial y prelavado.</strong></li>
-    <li>✔ <strong>Mesas, fregaderos y mobiliario de acero inoxidable.</strong></li>
-    <li>✔ <strong>Máquinas de café y molinos.</strong></li>
-    <li>✔ <strong>Trituradores y compactadores de residuos.</strong></li>
-    <li>✔ <strong>Sistemas de iluminación y control eléctrico.</strong></li>
+    <li> <strong>Grifería industrial y prelavado.</strong></li>
+    <li> <strong>Mesas, fregaderos y mobiliario de acero inoxidable.</strong></li>
+    <li> <strong>Máquinas de café y molinos.</strong></li>
+    <li> <strong>Trituradores y compactadores de residuos.</strong></li>
+    <li> <strong>Sistemas de iluminación y control eléctrico.</strong></li>
 </ul>
 <a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
     ← Volver al inicio
