--- a/privacidad.html
+++ b/privacidad.html
@@ -128,11 +128,14 @@ footer img:hover {
 <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px;">
     <a href="https://www.eurofours.com/es" target="_blank">
         <img src="logos_proveedores/eurofours.png" alt="Logo Eurofours" style="height: 50px;" loading="lazy">
-    </a>   
+    </a> 
+    <a href="https://www.edenox.es/" target="_blank">
+        <img src="logos_proveedores/edenox.webp" alt="Logo Edenox" style="height: 50px;" loading="lazy">
+    </a>  
 </div>
     <br>
     <p>©2025 GastroSat. Algunos derechos reservados.</p>
-    <p>Desarrollado con 💚 por <strong>GastroSat</strong></p>
+    <p>Desarrollado con 💚 por <strong>Gastrosat</strong></p>
 </footer>
 
 
