--- a/servicios.html
+++ b/servicios.html
@@ -90,10 +90,60 @@ img.logo {
 
         <!-- Caja de contenido sin borde -->
         <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
-            <h2>🚀 Bienvenido/a a Gastrosat</h2>
-                    <p>Si es cliente de Gastrosat, le informamos que de acuerdo con el Reglamento (UE) 2016/679 (GDPR) y la Ley Orgánica 3/2018 (LOPDGDD), le informamos que sus datos personales han sido incorporados a un fichero titularidad de Gastrosat, con la finalidad de gestionar la relación comercial. Puede ejercer sus derechos de acceso, rectificación, supresión, oposición, limitación y portabilidad enviando un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a>.</p>
-
-
+           <h2>⚙️ Servicios de Asistencia Técnica para Hostelería</h2>
+<p></p>
+<h3>🧊 Frío Industrial</h3>
+<ul>
+    <li>✅ <strong>Cámaras de conservación y congelación:</strong> puertas, paneles, evaporadores, compresores.</li>
+    <li>✅ <strong>Vitrinas refrigeradas:</strong> expositoras, murales, autoservicio.</li>
+    <li>✅ <strong>Mesas frías y armarios refrigerados:</strong> gastronorm, pastelería, heladería.</li>
+    <li>✅ <strong>Fabricadores de hielo:</strong> cubito, escama, nugget, hielo seco.</li>
+    <li>✅ <strong>Enfriadores de botellas y barriles.</strong></li>
+</ul>
+    <br>
+<h3>🔥 Cocción y Calor</h3>
+<ul>
+    <li>✅ <strong>Hornos:</strong> convectores, mixtos, brasa, pizza.</li>
+    <li>✅ <strong>Planchas, fry-tops y parrillas.</strong></li>
+    <li>✅ <strong>Freidoras y baños maría.</strong></li>
+    <li>✅ <strong>Cocinas industriales y quemadores.</strong></li>
+    <li>✅ <strong>Mantenedores de calor y lámparas infrarrojas.</strong></li>
+</ul>
+    <br>
+<h3>🚰 Lavado y Higiene</h3>
+<ul>
+    <li>✅ <strong>Lavavajillas industriales:</strong> cúpula, arrastre, túneles de lavado.</li>
+    <li>✅ <strong>Lavavasos y lavaplatos.</strong></li>
+    <li>✅ <strong>Dosificadores de detergente y abrillantador.</strong></li>
+    <li>✅ <strong>Sistemas de filtrado y ósmosis inversa.</strong></li>
+</ul>
+    <br>
+<h3>💨 Extracción y Ventilación</h3>
+<ul>
+    <li>✅ <strong>Campanas extractoras:</strong> filtrado, compensación, UV.</li>
+    <li>✅ <strong>Motores y turbinas de extracción.</strong></li>
+    <li>✅ <strong>Filtros de grasa y carbón activo.</strong></li>
+    <li>✅ <strong>Sistemas de renovación de aire.</strong></li>
+</ul>
+    <br>
+<h3>🍽️ Buffets y Autoservicio</h3>
+<ul>
+    <li>✅ <strong>Baños maría y mesas calientes.</strong></li>
+    <li>✅ <strong>Islas de frío y self-service.</strong></li>
+    <li>✅ <strong>Termos y dispensadores de líquidos.</strong></li>
+</ul>
+    <br>
+<h3>🔩 Otros Equipos y Elementos</h3>
+<ul>
+    <li>✅ <strong>Grifería industrial y prelavado.</strong></li>
+    <li>✅ <strong>Mesas, fregaderos y mobiliario de acero inoxidable.</strong></li>
+    <li>✅ <strong>Máquinas de café y molinos.</strong></li>
+    <li>✅ <strong>Trituradores y compactadores de residuos.</strong></li>
+    <li>✅ <strong>Sistemas de iluminación y control eléctrico.</strong></li>
+</ul>
+<a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
+    ← Volver al inicio
+</a>
         </div>
     </div>
 
