--- a/servicios.html
+++ b/servicios.html
@@ -92,7 +92,7 @@ img.logo {
         <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
            <h2>⚙️ Servicios de Asistencia Técnica para Hostelería</h2>
 
-            <p>Si es cliente de Gastrosat, le informamos que de acuerdo con el Reglamento (UE) 2016/679 (GDPR) y la Ley Orgánica 3/2018 (LOPDGDD), le informamos que sus datos personales han sido incorporados a un fichero titularidad de Gastrosat, con la finalidad de gestionar la relación comercial. Puede ejercer sus derechos de acceso, rectificación, supresión, oposición, limitación y portabilidad enviando un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a>.</p>
+            <p> a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a>.</p>
         </div>
     </div>
 
