--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@ img.logo {
             <br>
             <hr>
             <h3>⚙️ Servicios de Asistencia Técnica</h3>
-            <p>Brindamos soluciones integrales para entornos profesionales de hostelería. Si sucede tras la barra, en la cocina, en una cámara o bajo el fregadero o pica, podemos solucionarlo.  
-            Nos especializamos en la reparación de equipos frigoríficos, lavavajillas industriales, túneles de lavado, hornos, campanas de extracción, entre otros.</p>  
-            <p>En este enlace puedes consultar la <a href="https://www.gastrosat.com/servicios.html">lista completa de servicios</a>.</p>  
+            <p>Brindamos soluciones integrales para entornos profesionales de hostelería. Si ocurre tras la barra, en la cocina, en una cámara o bajo el fregadero o la pica, podemos solucionarlo.  
+            Nos especializamos en la reparación de todo lo que puede romperse y lo hace en el peor momento, entre otros.</p>  
+            <p>🔗 En este enlace puedes consultar nuestro <a href="https://www.gastrosat.com/servicios.html">listado de servicios</a>.</p>  
             <br>  
             <hr>
             
