--- a/servicios.html
+++ b/servicios.html
@@ -67,7 +67,7 @@ img.logo {
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>GastroSat | Asistencia Técnica y Equipamiento para Hostelería</title>
+    <title>GastroSat | Servicios de Asistencia Técnica para Hostelería</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="GastroSat ofrece asistencia técnica y venta de equipamiento para hostelería en Mallorca. Reparación, mantenimiento e instalación de maquinaria industrial.">
@@ -101,6 +101,7 @@ img.logo {
     <li>✅ <strong>Fabricadores de hielo:</strong> cubito, escama, nugget, hielo seco.</li>
     <li>✅ <strong>Enfriadores de botellas y barriles.</strong></li>
 </ul>
+    <hr>
     <br>
 <h3>🔥 Cocción y Calor</h3>
 <ul>
