--- a/servicios.html
+++ b/servicios.html
@@ -149,7 +149,7 @@ img.logo {
 </ul>
     <br>
     <hr>
-            ➕ Y algunas cosas más. A estas alturas, lo mejor sería que nos consultes directamente y veamos cómo podemos ayudarte.
+           <p>➕ Y algunas cosas más. A estas alturas, lo mejor sería que nos consultes directamente y veamos cómo podemos ayudarte.</p>
     <br>
     <br>
 <a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
