--- a/privacidad.html
+++ b/privacidad.html
@@ -30,6 +30,7 @@ img.logo {
         justify-content: center; /* Mantiene el contenido centrado */
         gap: 50px; /* Espacio entre el logo y el contenido */
         max-width: 1000px; /* Ajusta el ancho máximo para evitar desbordamientos */
+        flex-grow: 1; /* Permite que el contenido ocupe su espacio sin estirarse */
     }
 
     .logo {
