--- a/privacidad.html
+++ b/privacidad.html
@@ -76,8 +76,16 @@ img.logo {
 
         <!-- Caja de contenido sin borde -->
         <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
-            <h2>Política de privacidad</h2>
-            <p>Si es cliente de Gastrosat, le informamos que de acuerdo con el Reglamento (UE) 2016/679 (GDPR) y la Ley Orgánica 3/2018 (LOPDGDD), le informamos que sus datos personales han sido incorporados a un fichero titularidad de Gastrosat, con la finalidad de gestionar la relación comercial. Puede ejercer sus derechos de acceso, rectificación, supresión, oposición, limitación y portabilidad enviando un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a>.</p>
+            <h2>🔒 Política de privacidad</h2>
+            <p>Si es cliente de Gastrosat, le informamos que de acuerdo con el Reglamento (UE) 2016/679 (GDPR) y la Ley Orgánica 3/2018 (LOPDGDD), le informamos que sus datos personales 
+                han sido incorporados a un fichero titularidad de Gastrosat, con la finalidad de gestionar la relación comercial. Puede ejercer sus derechos de acceso, rectificación, supresión, 
+                oposición, limitación y portabilidad enviando un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a>.</p>
+                
+            <h2>🍪 Sobre el uso de cookies</h2>
+                <p>En GastroSat no usamos cookies porque, sinceramente, no las necesitamos. No nos interesa rastrear qué haces en nuestra web, ni qué páginas visitas ni cuántas veces vuelves. Si nos contactas, 
+                será porque quieres, y si nos recuerdas, mejor aún. Preferimos enfocarnos en ofrecerte un buen servicio en lugar de recopilar datos innecesarios. Así de simple.</p>
+
+            
 <a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
     ← Volver al inicio
 </a>
