--- a/privacidad.html
+++ b/privacidad.html
@@ -65,7 +65,7 @@ img.logo {
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>GastroSat | Política de privacidad</title>
+    <title>Gastrosat | Política de privacidad</title>
     
 </head>
 <body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; text-align: center;">
