--- a/servicios.html
+++ b/servicios.html
@@ -67,7 +67,7 @@ img.logo {
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>GastroSat | Servicios de Asistencia Técnica para Hostelería</title>
+    <title>Gastrosat | Servicios de Asistencia Técnica para Hostelería</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="GastroSat ofrece asistencia técnica y venta de equipamiento para hostelería en Mallorca. Reparación, mantenimiento e instalación de maquinaria industrial.">
