--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@ img.logo {
                 <p>Déjanos una <a href="https://g.page/r/CSW7t4EwKIlgEBM/review" target="_blank">reseña positiva</a> o una <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">reseña negativa</a>. Tú decides.🎯</p> 
             
               <a href="#" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
-    ⬆ Volver arriba
-</a> 
+    ↑ Volver arriba
+</a>
+
 
         </div>
     </div>
