--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@ img.logo {
 
         </div>
     </div>
-    <nav class="footer-menu">
+    <div><nav class="footer-menu">
     <ul class="footer-links">
         <li><a href="/">Inicio</a></li>
         <li><a href="/catalogos.html">Catálogos</a></li>
         <li><a href="/servicios.html">Servicios</a></li>
         <li><a href="/contacto.html">Contacto</a></li>
     </ul>
-</nav>
+</nav></div>
 <!-- Footer con imágenes de logos con opacidad reducida -->
 <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px;">
