--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@ img.logo {
 
         </div>
     </div>
-    <nav class="footer-menu">
-    <ul class="footer-links">
+   <nav class="nav-menu">
+    <ul class="nav-links">
         <li><a href="/">Inicio</a></li>
         <li><a href="/catalogos.html">Catálogos</a></li>
         <li><a href="/servicios.html">Servicios</a></li>
