--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ img.logo {
 }
 
 </style>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=2">
 
 <link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
     <!-- Favicon estándar -->
