--- a/index.html
+++ b/index.html
@@ -179,9 +179,8 @@ img.logo {
     <nav>
     <ul class="nav-links">
         <li><a href="/">Inicio</a></li>
-        <li><a href="/catalogos.html">Catálogos</a></li>
         <li><a href="/servicios.html">Servicios</a></li>
-        <li><a href="/contacto.html">Contacto</a></li>
+        <li><a href="/privacidad.html">Privacidad</a></li>
     </ul>
 </nav>
 
