--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ img.logo {
         <li><a href="/">Inicio</a></li>
         <li><a href="/servicios.html">Servicios</a></li>
         <li><a href="/privacidad.html">Privacidad</a></li>
+        <li><a href="/servicios.html">Contacto</a></li>
     </ul>
 </nav>
 
