--- a/contacto.html
+++ b/contacto.html
@@ -79,7 +79,7 @@ img.logo {
             <h2>📩 Contacto</h2>
 <p>Si tienes alguna consulta o necesitas asistencia, rellena el formulario y te responderemos lo antes posible.</p>
 
-<form action="enviar.php" method="post">
+<form action="enviar.php" method="get">
     <label for="nombre">👤 Nombre:</label>
     <input type="text" id="nombre" name="nombre" required>
 
