--- a/servicios.html
+++ b/servicios.html
@@ -161,7 +161,7 @@ img.logo {
 
 <!-- Footer con imágenes de logos con opacidad reducida -->
 <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
-    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px;">
+    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px; margin-top: 15px;">
         
     <a href="https://www.infrico.com/" target="_blank">
         <img src="logos_proveedores/infrico.png" alt="Logo Infrico" style="height: 50px;" loading="lazy">
