--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@ img.logo {
             <hr>
 
             <h3>📞 ¿Nos ponemos en contacto?</h3>
-            <p>Puedes llamarnos (en horario comercial) o enviar un <strong>WhatsApp</strong> al <a href="tel:+871252049">+34 871 252 049</a></p>
+            <p>Puedes llamarnos (en horario comercial) o enviar un <a href="https://wa.me/34620528074" target="_blank" class="whatsapp-button">
+    
+<strong>WhatsApp</strong></a> al <a href="tel:+871252049">+34 871 252 049</a></p>
             <p>O si lo prefieres, envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
             <p>En cualquier caso estaremos encantados de ayudarte.🤝</p>
                
