--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@ img.logo {
     </div>
     <nav>
     <ul class="nav-links">
-        <li>🏠 <a href="/">Inicio</a></li>|
-        <li>⚙️ <a href="/servicios.html">Servicios</a></li>|
-        <li>🔒 <a href="/privacidad.html">Privacidad</a></li>
+        <li><a href="/">Inicio</a></li>|
+        <li><a href="/servicios.html">Servicios</a></li>|
+        <li><a href="/privacidad.html">Privacidad</a></li>
        
     </ul>
 </nav>
