--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@ img.logo {
             <h3>⚙️ Servicio de Asistencia Técnica</h3>
             <p>Brindamos soluciones integrales para entornos profesionales de hostelería. Si ocurre tras la barra, en la cocina, en una cámara o bajo el fregadero, podemos solucionarlo.  
             Nos especializamos en la reparación de todo lo que puede romperse y lo hace en el peor momento, entre otros.</p>  
-            <p>🔗 <a href="https://www.gastrosat.com/servicios.html">En este enlace puedes consultar nuestro listado de servicios</a>.</p>  
+            
+            <a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
+    Ver listado de servicios →
+</a>
             <br>  
             <hr>
             
