--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@ img.logo {
     </div>
     <nav>
     <ul class="nav-links">
-        <li><a href="/">Inicio</a></li>|
-        <li><a href="/servicios.html">Servicios</a></li>|
+        <li><a href="/">Inicio</a></li>⋮
+        <li><a href="/servicios.html">Servicios</a></li>⋮
         <li><a href="/privacidad.html">Privacidad</a></li>
        
     </ul>
