--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ img.logo {
             <p>Brindamos soluciones integrales para entornos profesionales de hostelería. Si ocurre tras la barra, en la cocina, en una cámara o bajo el fregadero, podemos solucionarlo.  
             Nos especializamos en la reparación de todo lo que puede romperse y lo hace en el peor momento, entre otros.</p>  
             
-            <p><a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
+            <p><a href="/servicios" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
     Ver listado de servicios →
 </a></p>
             <br>  
