--- a/contacto.html
+++ b/contacto.html
@@ -93,6 +93,7 @@ img.logo {
   </label>
   <!-- your other form fields go here -->
   <button type="submit">Send</button>
+    <input type="hidden" name="_next" value="https://gastrosat.com">
 </form>
             
 <a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
