--- a/contacto.html
+++ b/contacto.html
@@ -84,11 +84,11 @@ img.logo {
   method="POST"
 >
   <label>
-    Your email:
+    Correo electrónico:
     <input type="email" name="email">
   </label>
   <label>
-    Your message:
+    Mensaje:
     <textarea name="message"></textarea>
   </label>
   <!-- your other form fields go here -->
