--- a/contacto.html
+++ b/contacto.html
@@ -92,7 +92,7 @@ img.logo {
     <textarea name="message"></textarea>
   </label>
     <input type="hidden" name="_next" value="https://gastrosat.com">
-  <button type="submit">Send</button>
+  <button type="submit">Enviar</button>
 </form>
             <script>
     document.querySelector("form").addEventListener("submit", function(event) {
