--- a/contacto.html
+++ b/contacto.html
@@ -84,8 +84,16 @@ img.logo {
   method="POST"
 >
   <label>
+    Nombre:
+    <input type="nombre" name="nombre">
+  </label>    
+  <label>
     Correo electrónico:
     <input type="email" name="email">
+  </label>
+    <label>
+    Teléfono:
+    <input type="telefono" name="telefono">
   </label>
   <label>
     Mensaje:
