--- a/contacto.html
+++ b/contacto.html
@@ -104,21 +104,34 @@ img.logo {
 </form>
 
             <script>
-    document.querySelector("form").addEventListener("submit", function(event) {
-        event.preventDefault(); // Evita la redirección automática
-        fetch(this.action, {
-            method: this.method,
-            body: new FormData(this),
-            headers: { 'Accept': 'application/json' }
-        }).then(response => {
-            if (response.ok) {
-                window.location.href = "https://gastrosat.com"; // Redirige manualmente
-            } else {
-                alert("Hubo un error al enviar el formulario.");
-            }
-        });
+    document.addEventListener("DOMContentLoaded", function() {
+        const form = document.querySelector("form"); // Busca el formulario
+
+        if (form) { // Verifica si el formulario realmente existe antes de ejecutar el código
+            form.addEventListener("submit", function(event) {
+                event.preventDefault(); // Evita la redirección automática
+
+                fetch(this.action, {
+                    method: this.method,
+                    body: new FormData(this),
+                    headers: { 'Accept': 'application/json' }
+                }).then(response => {
+                    if (response.ok) {
+                        window.location.href = "https://gastrosat.com"; // Redirige manualmente
+                    } else {
+                        alert("Hubo un error al enviar el formulario.");
+                    }
+                }).catch(error => {
+                    console.error("Error en la solicitud:", error);
+                    alert("Hubo un problema de conexión. Inténtalo de nuevo.");
+                });
+            });
+        } else {
+            console.error("Formulario no encontrado en el DOM.");
+        }
     });
 </script>
+
             
 <a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
     ← Volver al inicio
