--- a/contacto.html
+++ b/contacto.html
@@ -68,7 +68,7 @@ img.logo {
     <title>Gastrosat | Política de privacidad</title>
     
 </head>
-<body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; text-align: center;">
+<body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: left; text-align: center;">
 
     <div class="wrapper" style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
         <!-- Logo -->
