--- a/contacto.html
+++ b/contacto.html
@@ -79,7 +79,7 @@ img.logo {
             <h2>📩 Contacto</h2>
             <p>Si tienes alguna consulta o necesitas asistencia, rellena el formulario y te responderemos lo antes posible.</p>
             <br>
-            <form action="https://formspree.io/f/mvgkgjba" method="POST" style="text-align: left;">
+            <form action="https://formspree.io/f/mvgkgjba" method="POST" style="text-align: left;" style="margin-right: auto;">
                 <label>
                     Nombre:
                     <input type="text" name="nombre">
