--- a/contacto.html
+++ b/contacto.html
@@ -65,10 +65,10 @@ img.logo {
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>Gastrosat | Política de privacidad</title>
+    <title>Gastrosat | Contacto</title>
     
 </head>
-<body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: left; text-align: center;">
+<body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; text-align: center;">
 
     <div class="wrapper" style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
         <!-- Logo -->
