--- a/contacto.html
+++ b/contacto.html
@@ -102,6 +102,9 @@ img.logo {
                 <br>
                 <button type="submit">Enviar</button>
             </form>
+            <a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
+    ← Volver al inicio
+</a>
         </div>
     </div>
 </body>
