--- a/contacto.html
+++ b/contacto.html
@@ -81,7 +81,7 @@ img.logo {
             <br>
             <form action="https://formspree.io/f/mvgkgjba" method="POST" style="text-align: left;" style="margin-right: auto;">
                 <label>
-                    Nombre:
+                    <p>Nombre:</p>
                     <input type="text" name="nombre">
                 </label>    
                 <label>
