--- a/contacto.html
+++ b/contacto.html
@@ -85,15 +85,15 @@ img.logo {
                     <input type="text" name="nombre">
                 </label>    
                 <label>
-                    Correo electrónico:
+                    <p>Correo electrónico:</p>
                     <input type="email" name="email" required>
                 </label>
                 <label>
-                    Teléfono:
+                    <p>Teléfono:</p>
                     <input type="tel" name="telefono">
                 </label>
                 <label>
-                    Mensaje:
+                    <p>Mensaje:</p>
                     <textarea name="message"></textarea>
                 </label>
                 
