--- a/contacto.html
+++ b/contacto.html
@@ -81,19 +81,19 @@ img.logo {
             <br>
             <form action="https://formspree.io/f/mvgkgjba" method="POST" style="text-align: left;" style="margin-right: auto;">
                 <label>
-                    <p>Nombre:</p>
+                    Nombre:
                     <input type="text" name="nombre">
-                </label>    
+                </label><br>    
                 <label>
-                    <p>Correo electrónico:</p>
+                    Correo electrónico:
                     <input type="email" name="email" required>
                 </label>
                 <label>
-                    <p>Teléfono:</p>
+                    Teléfono:
                     <input type="tel" name="telefono">
                 </label>
                 <label>
-                    <p>Mensaje:</p>
+                    Mensaje:
                     <textarea name="message"></textarea>
                 </label>
                 
