--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ img.logo {
             <hr>
 
             <h3>📞 ¿Nos ponemos en contacto?</h3>
-            <p>Puedes llamarnos (en horario comercial) o enviar un <a href="https://wa.me/34871252049" target="_blank" class="whatsapp-button">WhatsApp</a> al <a href="tel:+871252049">+34 871 252 049</a></p>
+            <p>Puedes llamarnos (en horario comercial) o enviar un <a href="https://wa.me/34871252049" target="_blank" class="whatsapp-button">WhatsApp</a> al <strong>+34 871 252 049</strong></p>
             <p>Si lo prefieres puedes usar el <a href="https://www.gastrosat.com/contacto">formulario de contacto</a>, o envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
             <p>En cualquier caso estaremos encantados de ayudarte.🤝</p>
                
