--- a/privacidad.html
+++ b/privacidad.html
@@ -77,7 +77,7 @@ img.logo {
         <!-- Caja de contenido sin borde -->
         <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
             <h2>🔒 Política de privacidad</h2>
-            <p>Si es cliente de Gastrosat, le informamos que de acuerdo con el Reglamento (UE) 2016/679 (GDPR) y la Ley Orgánica 3/2018 (LOPDGDD), le informamos que sus datos personales 
+            <p>Si es cliente de Gastrosat, le informamos que de acuerdo con el Reglamento (UE) 2016/679 (GDPR) y la Ley Orgánica 3/2018 (LOPDGDD), sus datos personales 
                 han sido incorporados a un fichero titularidad de Gastrosat, con la finalidad de gestionar la relación comercial. Puede ejercer sus derechos de acceso, rectificación, supresión, 
                 oposición, limitación y portabilidad enviando un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a>.</p>
                 
