--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ img.logo {
                 <li style="margin-bottom: 12px;">✅ <strong>¿Tenéis catálogos en papel?</strong> ¡Claro! Y en pergamino, rollo de papiro o tallados en piedra si lo prefieres, solo tienes que solicitarlo y te lo hacemos llegar.</li>
                 <li style="margin-bottom: 12px;">✅ <strong>¿Las máquinas son buenas?</strong> Tienen sus días, como todos, pero si se las trata bien suelen hacer su trabajo.</li>
                 <li style="margin-bottom: 12px;">✅ <strong>¿Hacéis descuentos?</strong> Sí, hacemos descuentos enormes pero solo si nos caes bien.</li>
-                <li style="margin-bottom: 12px;">✅ <strong>¿Podéis reparar mi vitrina de 1976?</strong> ¡Por supuesto! No es nuestro fuerte, pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
+                <li style="margin-bottom: 12px;">✅ <strong>¿Podéis reparar mi vitrina de 1976?</strong> ¡Por supuesto! No es nuestro fuerte, pero restauramos todo tipo de piezas de museo cuando nos lo piden.</li>
                 <li style="margin-bottom: 12px;">✅ <strong>¿Podéis venir rápido?</strong> ¡No! Tenemos que respetar las normas de tráfico porque no ganamos para multas. Llegar en menos de 24 horas es lo mejor que podemos hacer.</li>
                 <li style="margin-bottom: 12px;">✅ <strong>¿Será muy caro?</strong> Depende comparado con qué, pero a priori será más barato que el aceite de oliva. Cuando suponemos que el coste será mayor, nos toca afinar el lápiz y hacer un presupuesto.</li>
             <br>
