--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ img.logo {
 </div>
     <br>
     <p>©2025 GastroSat. Algunos derechos reservados.</p>
+    <p><a href="/privacidad.html">Privacidad y Cookies</a></p>
     <p>Desarrollado con 💚 por <strong>Gastrosat</strong></p>
 </footer>
 
