--- a/index.html
+++ b/index.html
@@ -164,7 +164,12 @@ img.logo {
                 
             <h3>👀 ¿Ya nos conocemos?</h3>   
                 <p>Déjanos una <a href="https://g.page/r/CSW7t4EwKIlgEBM/review" target="_blank">reseña positiva</a> o una <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">reseña negativa</a>.</p> 
-                <p>Tú decides.🎯</p>        
+                <p>Tú decides.🎯</p>   
+                <p><a href="#" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });" 
+   style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
+    ↑ Volver arriba
+</a>
+</p>
         </div>
     </div>
     <nav>
