--- a/servicios.html
+++ b/servicios.html
@@ -158,6 +158,9 @@ img.logo {
 
         </div>
     </div>
+    <nav>
+    
+</nav>
 
 <!-- Footer con imágenes de logos con opacidad reducida -->
 <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
