--- a/privacidad.html
+++ b/privacidad.html
@@ -91,6 +91,9 @@ img.logo {
 </a>
         </div>
     </div>
+    <nav>
+    
+</nav>
 
 <!-- Footer con imágenes de logos con opacidad reducida -->
 <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
