--- a/contacto.html
+++ b/contacto.html
@@ -163,7 +163,9 @@ img.logo {
         }
     });
 </script>
-
+<nav>
+    
+</nav>
 <!-- Footer con imágenes de logos con opacidad reducida -->
 <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px;">
