--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ img.logo {
             <hr>
 
             <h3>📞 ¿Nos ponemos en contacto?</h3>
-            <p>Puedes llamarnos (en horario comercial) o enviar un <a href="https://wa.me/34871252049" target="_blank" class="whatsapp-button">WhatsApp</a> al <a href="https://wa.me/34871252049" target="_blank" class="whatsapp-button">+34 871 252 049</a></p>
+            <p>Puedes llamarnos (en horario comercial) o enviar un <a href="https://wa.me/34871252049" target="_blank" class="whatsapp-button">WhatsApp</a> al <a href="tel:+34871252049">+34 871 252 049</a></p>
             <p>Si lo prefieres puedes usar el <a href="https://www.gastrosat.com/contacto">formulario de contacto</a>, o envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
             <p>En cualquier caso estaremos encantados de ayudarte.🤝</p>
                
@@ -210,7 +210,7 @@ img.logo {
 </div>
     <br>
     <p>©2025 GastroSat. Algunos derechos reservados.</p>
-    <p><a href="/privacidad.html">Privacidad y Cookies</a></p>
+    <p><a href="/privacidad.html">Política de Privacidad y Cookies</a></p>
     <p>Desarrollado con 💚 por <strong>Gastrosat</strong></p>
 </footer>
 
