--- a/servicios.html
+++ b/servicios.html
@@ -189,6 +189,7 @@ img.logo {
 </div>
     <br>
     <p>©2025 GastroSat. Algunos derechos reservados.</p>
+    <p><a href="/privacidad.html">Política de Privacidad y Cookies</a></p>
     <p>Desarrollado con 💚 por <strong>Gastrosat</strong></p>
 </footer>
 
