--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ img.logo {
 </style>
     <link rel="stylesheet" href="styles.css?v=2">
 
-<link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
+<link rel="preload" href="logov6com.svg" as="image" type="image/svg+xml">
     <!-- Favicon estándar -->
 <link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
 
@@ -79,7 +79,7 @@ img.logo {
 
     <div class="wrapper" style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
         <!-- Logo -->
-        <img src="logov5.svg" alt="GastroSat Logo" class="logo">
+        <img src="logov6com.svg" alt="GastroSat Logo" class="logo">
 
         <!-- Caja de contenido sin borde -->
         <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
