--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ img.logo {
 <li>📖 <a href="https://www.dropbox.com/scl/fi/k8eblivdg9qpihtqwu39n/Eurofours_cat-logo_2022.pdf?rlkey=86teqnfccyg0x5m0fpkabdtsu&st=gcpr8ll7&raw=1" target="_blank">Ver Catálogo</a> EUROFOURS (Panadería) | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/k8eblivdg9qpihtqwu39n/Eurofours_cat-logo_2022.pdf?rlkey=86teqnfccyg0x5m0fpkabdtsu&st=gcpr8ll7&dl=1">Descargar PDF</a></li>
 
-<li>📖 <a href="https://www.dropbox.com/scl/fi/4ignuk6rrkanchkl4sgox/Impafri_cat-logo_c-maras.pdf?rlkey=yyeozwimkmchqbgeat3b2h884&st=hhzlvzmq&raw=1" target="_blank">Ver Catálogo</a> IMPAFRI (cámaras) | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/4ignuk6rrkanchkl4sgox/Impafri_cat-logo_c-maras.pdf?rlkey=yyeozwimkmchqbgeat3b2h884&st=hhzlvzmq&dl=1">Descargar PDF</a></li>
+<li>📖 <a href="https://www.dropbox.com/scl/fi/j3bay3efepr03efv7qm2i/Impafri_cat-logo_2025.pdf?rlkey=uimk8u4xc9810yendt7njnnxm&st=uf18opdy&raw=1" target="_blank">Ver Catálogo</a> IMPAFRI (cámaras) | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/j3bay3efepr03efv7qm2i/Impafri_cat-logo_2025.pdf?rlkey=uimk8u4xc9810yendt7njnnxm&st=uf18opdy&dl=1">Descargar PDF</a></li>
 
 <li>📖 <a href="https://www.dropbox.com/scl/fi/2jwj8s2drsaug0vbdg1oi/Infrico_cat-logo_fribuffet.pdf?rlkey=q43pi89290frnk5nqz0oxficl&st=xbvsojcl&raw=1" target="_blank">Ver Catálogo</a> FRIBUFFET | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/2jwj8s2drsaug0vbdg1oi/Infrico_cat-logo_fribuffet.pdf?rlkey=q43pi89290frnk5nqz0oxficl&st=xbvsojcl&dl=1">Descargar PDF</a></li>
