--- a/index.html
+++ b/index.html
@@ -4,56 +4,57 @@
     <style>
 /* Ajustes generales (ya funciona bien en móviles) */
 img.logo {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-}
-@media screen and (min-width: 1180px) {
-    .logo {
-        position: sticky; /* Elimina la propiedad sticky */
-        top: 20px;
-    }
+  width: 100%;
+  max-width: 300px;
+  height: auto;
 }
 
-/* Ajuste para escritorio */
-/* ===== PARCHE LAYOUT ESCRITORIO: logo izquierda sin solapes ===== */
+/* (si tenías otro bloque igual, no pasa nada) */
+
+/* ===== Layout escritorio: dos columnas, sin solapes ===== */
 @media screen and (min-width: 768px) {
   .wrapper {
     display: flex;
-    flex-wrap: nowrap !important;   /* anula el inline "flex-wrap: wrap" */
-    align-items: flex-start;
+    flex-wrap: nowrap !important;     /* anula el inline wrap */
+    align-items: flex-start !important;/* evita centrado vertical */
     justify-content: center;
     gap: 50px;
     max-width: 1000px;
     margin: 0 auto;
-    padding: 20px;                  /* por si lo quitases del inline */
+    padding: 20px;
   }
 
   .logo {
-    position: static !important;    /* neutraliza cualquier sticky heredado */
-    flex: 0 0 300px;                /* columna fija para el logo */
+    /* columna fija a la izquierda */
+    flex: 0 0 300px;
     max-width: 300px;
     height: auto;
-    margin-top: 0;                  /* sin desplazamientos raros */
+
+    /* comportamiento pedido */
+    margin-top: 90px;                 /* arranca 90px por debajo del top */
+    position: sticky;
+    top: 20px;                        /* se queda a 20px al hacer scroll */
+    z-index: 1;                       /* por si hay z-index del contenido */
   }
 
   .content {
-    flex: 1 1 0;                    /* columna fluida para el contenido */
-    min-width: 0;                   /* evita desbordes en flex */
-    max-width: 650px;               /* opcional, mantiene línea de lectura */
+    flex: 1 1 0;
+    min-width: 0;
+    max-width: 650px;
     text-align: left;
   }
 }
 
-/* En pantallas muy anchas, aseguramos que NO sea sticky */
+/* Asegura el sticky también en pantallas muy anchas */
 @media screen and (min-width: 1180px) {
   .logo {
-    position: static !important;
-    top: auto !important;
+    position: sticky !important;
+    top: 20px !important;
   }
 }
-
 </style>
+
+
     <link rel="stylesheet" href="styles.css?v=2">
 
 <link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
