--- a/index.html
+++ b/index.html
@@ -106,7 +106,27 @@ img.logo {
             <p><strong>Servicio de Asistencia Técnica & Equipamiento Profesional para la Hostelería en Mallorca.</strong></p>
 
             <p>Cuando no podemos reparar una máquina, te vendemos una nueva. Por eso nuestras cifras de ventas son tan bajas.📉</p>
-            
+            <br>
+<hr>
+
+<h3>🛒 Visita nuestra tienda online</h3>
+<p style="text-align: center; margin: 20px 0;">
+  <a href="https://gastrosat.shop" target="_blank" 
+     style="display: inline-block; padding: 14px 28px; font-size: 18px; font-weight: bold; 
+            color: white; background: linear-gradient(135deg, #007bff, #00b894); 
+            text-decoration: none; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); 
+            transition: all 0.3s ease;">
+    🛍️ Entrar a la Tienda Online
+  </a>
+</p>
+
+<style>
+a[href*="gastrosat.shop"]:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 6px 14px rgba(0,0,0,0.25);
+  background: linear-gradient(135deg, #00b894, #007bff);
+}
+</style>
             <br>
             <hr>
 
