--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ img.logo {
 <hr>
 
 <h3>🛒 Visita nuestra tienda online</h3>
+            <p>¡Estrenamos tienda online!, te lo ponemos mas cómodo para que puedas ver todos los productos, descargar fichas técnicas y demás.. y por supuesto comprar con un clic, además de poder realizar pagos con tarjeta o PayPal.</p>
 <p style="text-align: center; margin: 20px 0;">
   <a href="https://gastrosat.shop" target="_blank" 
      style="display: inline-block; padding: 14px 28px; font-size: 18px; font-weight: bold; 
