--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ img.logo {
             color: white; background: linear-gradient(135deg, #007bff, #00b894); 
             text-decoration: none; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); 
             transition: all 0.3s ease;">
-    🛍️ Gastrosat.shop
+    🛍️ ir a Gastrosat.shop
   </a>
 </p>
 
