--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ img.logo {
             <br>
 <hr>
 
-<h3>🛒 Visita nuestra tienda online</h3>
+<h3>🛍️ Visita nuestra tienda online</h3>
             <p>¡Estrenamos tienda online!, te lo ponemos mas cómodo para que puedas ver todos los productos, descargar fichas técnicas y demás.. y por supuesto comprar con un clic, además de poder realizar pagos con tarjeta o PayPal.</p>
 <p style="text-align: center; margin: 20px 0;">
   <a href="https://gastrosat.shop" 
@@ -112,7 +112,7 @@ img.logo {
             color: white; background: linear-gradient(135deg, #007bff, #00b894); 
             text-decoration: none; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); 
             transition: all 0.3s ease;">
-    🛍️ ir a Gastrosat.shop
+    🛒 ir a Gastrosat.shop
   </a>
 </p>
 
